# adaptivewc

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.yaml  config.fast.yaml  config.llm.yaml  config.ollama.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
crawler/: __init__.py  __main__.py  config.py  exceptions.py  models.py
crawler/adaptive/: AGENTS.md  __init__.py  change_detector.py  strategy_learner.py  strategy_manager.py  structure_analyzer.py
crawler/alerting/: __init__.py  alerter.py
crawler/compliance/: __init__.py  rate_limiter.py  robots_parser.py  sitemap_parser.py
crawler/core/: __init__.py  crawler.py  distributed.py  fetcher.py  recrawl_scheduler.py  renderer.py  scheduler.py
crawler/deduplication/: __init__.py  content_hasher.py
crawler/extraction/: __init__.py  content_extractor.py  link_extractor.py
crawler/legal/: __init__.py  cfaa_checker.py  pii_detector.py
crawler/ml/: AGENTS.md  __init__.py  embeddings.py
crawler/storage/: __init__.py  factory.py  robots_cache.py  structure_llm_store.py  structure_store.py  url_store.py
crawler/utils/: __init__.py  logging.py  metrics.py  url_utils.py
docs/: adaptive_crawler_executive_summary.html  technical_report.md
examples/: demo_adaptive_extraction.py  distributed_crawl_example.py  js_rendering_example.py  news_articles_for_training.json  news_monitor.py  news_monitor_ml.py  scheduled_recrawl_example.py  sitemap_crawl_example.py  sports_news_monitor.py  sports_news_monitor_ml.py  structure_comparison.py
fingerprint/adaptive/: AGENTS.md
fingerprint/alerting/: AGENTS.md
fingerprint/compliance/: AGENTS.md
fingerprint/core/: AGENTS.md
fingerprint/extraction/: AGENTS.md
fingerprint/legal/: AGENTS.md
fingerprint/ml/: AGENTS.md
fingerprint/storage/: AGENTS.md
ml_models_news/: change_detector.pkl  classifier.json  classifier.meta.json  classifier.pkl
scrape_examples/: README.md
scrape_examples/captcha/: 1122.com.uy.html  aawsat.com.html  antena3.ro.html  azarlive.com.html  azertag.az.html  bangkokbiznews.com.html  cnnindonesia.com.html  europe1.fr.html  hespress.com.html  hraparak.am.html  iol.co.za.html  larazon.bo.html  legit.ng.html  lexpress.mu.html  mingpao.com.html  mothership.sg.html  news.am.html  nyheter24.se.html  observador.pt.html  okdiario.com.html  oneindia.com.html  oubanguimedias.com.html  peru21.pe.html  posttoday.com.html  radianonline.co.zm.html  reuters.html  sindonews.com.html  standaard.be.html  suspilne.media.html  telegraaf.nl.html  tuko.co.ke.html  yen.com.gh.html
scrape_examples/success/: 24.hu.html  aftonbladet.se.html  alfa.lt.html  bahamaspress.com.html  balkanweb.com.html  bbc.com.html  bluewin.ch.html  clicrbs.com.br.html  dailystar.co.uk.html  danas.rs.html  denik.cz.html  dhnet.be.html  diariandorra.ad.html  dnevnik.hr.html  dw.com.html  elmundo.es.html  elnacional.com.html  elwatanplus.com.html  expres.cz.html  expressen.se.html  fakti.bg.html  gva.be.html  hlavnespravy.sk.html  hoy.com.py.html  ilfattoquotidiano.it.html  independent.ie.html  kleinezeitung.at.html  kompas.com.html  kurir.mk.html  larepublica.pe.html  lastampa.it.html  lenta.ru.html  libero.it.html  milliyet.com.tr.html  n-tv.de.html  nacion.com.html  news.mn.html  nur.kz.html  nzherald.co.nz.html  on.cc.html  (+8 more)
scrape_examples/unknown/: abc.net.au.html  alarabiya.net.html  anandabazar.com.html  ecuavisa.com.html  fanpage.it.html  gazeta.uz.html  gazetatema.net.html  iefimerida.gr.html  inquirer.net.html  jeuneafrique.com.html  kalerkantho.com.html  kan.org.il.html  lahora.gt.html  libertatea.ro.html  libyaakhbar.com.html  ndtv.com.html  news.com.au.html  nownews.com.html  ouest-france.fr.html  popular.com.html  sudinfo.be.html  telegraph.co.uk.html  themercury.com.au.html  tribunnews.com.html  tvmnews.mt.html
scripts/: inspect_index.py  json_reader.py  train_embeddings.py
tests/: conftest.py
tests/unit/: test_content_extractor.py  test_rate_limiter.py
training_data/: category_training_data.json  generic_categories.json  sample_training_data.json
